# monteCarlo

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
docs/: Dichiarazione tesi conforme.docx  LIBERATORIA_TESI.doc  LIBERATORIA_TESI.docx  compile.sh  main.bbl  main.blg  main.tex  monte-carlo-glossary.sty  notes.tex  references.bib
docs/chapters/: chapter-Appendix-A-prob-stat.tex  chapter-Appendix-B-geo-alg.tex  chapter-Appendix-C-random-num.tex  chapter-Appendix-D-vulkan-code.tex  chapter-Appendix-E-materials-impldetails.tex  chapter-part1-1-electromagnetic-radiometry.tex  chapter-part1-2-color-camera.tex  chapter-part1-3-light-surface.tex  chapter-part1-4-volume-transport-no-alg.tex  chapter-part2-1-quasirandom-gen.tex  chapter-part2-2-sampling-montecarlo.tex  chapter-part2-3-variance-reduction.tex  chapter-part3-1-light-transportintro.tex  chapter-part3-2-light-transport-impl.tex
docs/presentation/: compile.sh  compile_handout.sh  presentation.tex  script  script.aux
docs/presentation/assets/: CIE_xyz_1931_2deg.csv
docs/svg-inkscape/: chapter2_colorimetry_RGB_color_matching_functions_svg-tex.pdf_tex  chapter2_colorimetry_chromaticity_diagram_1931_svg-tex.pdf_tex
execPython/: imageVariance.py  metropolisHastings.py  simpleIntegral.py
execSrc/: CMakeLists.txt
execSrc/cubeTest/: cubeTest.cpp
execSrc/spectrumTest/: spectrumTest.cpp
execSrc/test/: test.cpp
shaders/: cubes.vert
shaders/cubeTest/: cubeTest.frag  cubeTest.frag.spv  cubeTest.vert  cubeTest.vert.spv
shaders/spectrumTest/: common.comp  interaction.comp  optional.comp  ray.comp  sampling.comp  shapes.comp  spectrumTest.comp  spectrumTest.comp.spv
shaders/test/: cubes.frag
src/: Application.cpp  Application.h  ApplicationPtr.h  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  Device.cpp  Device.h  GPUTask.hpp  Image.h  KeyboardKey.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Scene.hpp  Shader.cpp  Shader.h  StaticVector.hpp  Swapchain.cpp  Swapchain.h  VulkanApplication.cpp  VulkanApplication.h  VulkanCommon.h  VulkanContext.inl  VulkanRenderer.hpp  initializers.hpp  logging.cpp  logging.h  utils.hpp
